# Machine_Learning_Projects

./: README.md
Breast_cancer_Prediction/: README.md
Breast_cancer_Prediction/Model/: breast_cancer_nn_model.h5
Car_Price_Prediction/: README.md  quikr_car_price_prediction.ipynb.ipynb
Diabetes_Prediction/: README.md  ml_Diabetes_Prediction.ipynb
House_Price_prediction/: pyproject.toml
IPL_Prediction_Model/: Copy_of_IPL_Prediction_Model_Training.ipynb  README.md
